syntax = "proto3";

import "proto/gymnasium/v1/dimensions/project.proto";

package proto.gymnasium.v1;

service Dimensions {
    rpc ListProjectRecords(ListProjectRecordsRequest) returns (ListProjectRecordsResponse);
    rpc GetProjectRecord(GetProjectRecordRequest) returns (GetProjectRecordResponse);
    rpc CreateProjectRecord(CreateProjectRecordRequest) returns (CreateProjectRecordResponse);
    rpc ArchiveProjectRecord(ArchiveProjectRecordRequest) returns (ArchiveProjectRecordResponse);
    rpc RestoreProjectRecord(RestoreProjectRecordRequest) returns (RestoreProjectRecordResponse);
    rpc DeleteProjectRecord(DeleteProjectRecordRequest) returns (DeleteProjectRecordResponse);
    rpc RenameProjectRecord(RenameProjectRecordRequest) returns (RenameProjectRecordResponse);
}

message ListProjectRecordsRequest{
    bool archived = 1;
}

message ListProjectRecordsResponse{
    repeated dimensions.Project project_records = 1;
}

message GetProjectRecordRequest {
    string slug = 1;
}

message GetProjectRecordResponse {
    dimensions.Project project_record = 1;
}

message CreateProjectRecordRequest {
    // The description of the Project.
    string description = 1;

    // The name of the Project.
    string name = 2;

    // The slug of the Project. Unique identifier for the Project's web address.
    string slug = 3;
}

message CreateProjectRecordResponse {
    dimensions.Project project_record = 1;
}

message ArchiveProjectRecordRequest {
    string id = 1;
}

message ArchiveProjectRecordResponse {
    dimensions.Project project_record = 1;
}

message RestoreProjectRecordRequest {
    string id = 1;
}

message RestoreProjectRecordResponse {
    dimensions.Project project_record = 1;
}

message DeleteProjectRecordRequest {
    string id = 1;
}

message DeleteProjectRecordResponse {}

message RenameProjectRecordRequest {
    string id = 1;

    // The new name of the Project.
    string name = 2;

    // The slug of the Project. Unique identifier for the Project's web address.
    string slug = 3;
}

message RenameProjectRecordResponse {
    dimensions.Project project_record = 1;
}
